more exhaustive switches (and minor other fixes)